--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div style="background-color: blueviolet;"></div>
       <div class="main">
-          <div class="main-display">
+          <div id="main-display">
               
           </div>
           <div class="main-controls">
