timer and scoring implemented

--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
       <div style="background-color: blueviolet;"></div>
       <div class="main">
           <div id="main-display">
-              
+              <div id="hud">
+                  <div class="container">
+                      <div id="timer">
+                            <h4>Time</h4>
+                            <p>mm:ss:ms</p>
+                      </div>
+                       <div id="hit">
+                            <h4>Hit</h4>
+                            <p>0</p>
+                       </div>
+                       <div id="miss">
+                            <h4>Miss</h4>
+                            <p>0</p>
+                       </div>
+                  </div>
+                   
+              </div>
           </div>
           <div class="main-controls">
                 <textarea id="interactiveTextArea">
