main layout clipped
clipped to prevent from extending main div height

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
       <div style="background-color: blueviolet;"></div>
-      <div class="main">
+      <div class="main clip">
           <div id="main-display">
               <div id="hud">
                   <div class="container">
@@ -28,7 +28,6 @@
                             <p>0</p>
                        </div>
                   </div>
-                   
               </div>
           </div>
           <div class="main-controls">
