--- a/index.html
+++ b/index.html
@@ -39,14 +39,24 @@
                             <div>
                                 <i id="ui-control-play" class="ion-ios-play-outline"></i>
                             </div>
-                            <!-- <i class="ion-ios-pause-outline"></i>
-                            <i class="ion-ios-volume-high"></i>
-                            <i class="ion-ios-volume-low"></i> -->
                        </div>
                        <div class="ui-controls">
                             <div>
                                 <i id="ui-control-volume" class="ion-ios-volume-high"></i>
                             </div>
+                       </div>
+                       <div class="technology">
+                           <div>
+                               <cite>created with</cite>
+                           </div>
+                           <div>
+                                <i class="ion-social-html5"></i>
+                                <i class="ion-social-css3"></i>
+                                <i class="ion-social-sass"></i>
+                                <i class="ion-social-javascript"></i>
+                                <i class="ion-social-nodejs"></i>
+                           </div>
+                           
                        </div>
                   </div>
               </div>
@@ -75,11 +85,22 @@
     <!-- fallback -->
     <script>window.jQuery || document.write('<script src="src/libs/jquery-3.3.1.min.js">\x3C/script>')</script>
     <script>window.jQuery || document.write('<script src="src/libs/jquery-ui.js">\x3C/script>')</script>
-    <script>window.jQuery || document.write('<link rel="stylesheet href="src/libs/ionicons.min.css">\x3C/link>')</script>
+    <!-- <script>window.jQuery || document.write('<link rel="stylesheet href="src/libs/ionicons.min.css"></link>')</script> -->
+
     <script src="/vendors/js/jquery.waypoints.min.js"></script>
+    <script src="/vendors/js/yepnope.js"></script>
     <script src="/src/js/app.min.js"></script>
     <script src="/src/js/animation.js"></script>
-   
+    <script>
+            yepnope([{
+            load: 'http:/­/ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js',
+            complete: function () {
+                if (!window.jQuery) {
+                yepnope('local/jquery.min.js');
+                }
+            }
+            }]);
+    </script>
     
    
 </body>
