game over score info

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
           <div class="modal" id="gameover-screen">
                 <div class="modal-content">
                     <strong>Game Over</strong>
+                    <div style="margin-top: 10px;">
+                        <div class="scores" id="hit-go">
+                                <p>Hit</p>
+                                <p>0</p>
+                        </div>
+                        <div class="scores" id="miss-go">
+                                <p>Miss</p>
+                                <p>0</p>
+                        </div>
+                    </div>
+                    
                     <div class="btn" id="play-again">
                         <p>play again</p>
                     </div>
