--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
       <div class="shadow clip">
       <div class="main">
           <div id="main-display">
+              <div id="manual-container">
+                  <div class="manual-content">
+                        <strong><p>How To Play</p></strong>
+                        <br/>
+                        <p>Press <strong>[enter]</strong></p>
+                        <p> to submit input</p>
+                        <br/>
+                        <p><em>Using arrow keys</em></p>
+                        <br/>
+                        <p><i class="ion-ios-arrow-thin-left"></i> and <i class="ion-ios-arrow-thin-right"></i> :</p>
+                        <p>delete a character</p>
+                        <br/>
+                        <p><i class="ion-ios-arrow-thin-up"></i> and <i class="ion-ios-arrow-thin-down"></i> :</p>
+                        <p>clear text field</p>
+                    </div>
+              </div>
               <div id="hud">
                   <div class="container">
                       <div id="game-info">
@@ -66,7 +82,11 @@
                                 <i class="ion-social-javascript"></i>
                                 <i class="ion-social-nodejs"></i>
                            </div>
-                           
+                           <div class="source">
+                               <a target="_blank" href="https://github.com/nhono99/KeyboardWarrior"><i class="ion-social-github"></i></a>
+                               
+                               <p>Download</p>
+                            </div>
                        </div>
                   </div>
               </div>
