fixed index.html bug

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <!-- stats.js lib <script src="http://threejs.org/examples/js/libs/stats.min.js"> -->
-    </script>
+    
     <script src="/src/js/particles.js"></script>
    
     <script>
             yepnope([{
-            load: 'http:/­/ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js',
+            load: 'http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js',
             complete: function () {
                 if (!window.jQuery) {
                 yepnope('local/jquery.min.js');
